--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <html lang="en">
 <!--<![endif]-->
 
-
-
 <head>
   <title>ISTech - IS Technology</title>
   <!-- Meta -->
@@ -307,6 +305,28 @@
         </div>
         <!--//quote-holder-->
       </div>
+
+      <div class="item item-reversed center-block">
+        <div class="profile-holder">
+          <img class="profile-image" src="assets/images/BuisnessMan.jpeg" alt="profile">
+        </div>
+        <div class="quote-holder">
+          <blockquote class="quote">
+            <u>
+              <p class="ClientName">אסטרל, שירותים פיננסים:</p>
+            </u>
+            <div class="quote-source">
+              <span class="name"></span>
+              <span class="meta"></span>
+            </div>
+            <!--//quote-source-->
+          </blockquote>
+
+        </div>
+        <!--//quote-holder-->
+      </div>
+
+
       <!--//item-->
     </div>
     <!--//container-->
@@ -322,17 +342,16 @@
 
       <div class="tabbed-area row">
         <!-- Nav tabs -->
-
         <ul class="feature-nav nav nav-pill nav-stacked text-left col-md-4 col-sm-6 col-xs-12 col-md-push-8 col-sm-push-6 col-xs-push-0" role="tablist">
           <li role="presentation" class="active"><a href="#feature-1" aria-controls="feature-1" role="tab" data-toggle="tab"><i class="fa fa-magic descProject"></i>מערכת לקרנות גידור</a></li>
           <li role="presentation"><a href="#feature-2" aria-controls="feature-2" role="tab" data-toggle="tab"><i class="fa fa-cubes descProject"></i>מערכת ניקוד לעידוד הישגיו של התלמיד</a></li>
           <li role="presentation"><a href="#feature-3" aria-controls="feature-3" role="tab" data-toggle="tab"><i class="fa fa-bar-chart descProject"></i>מערכת היכרויות אינטרנטית ומותאמת לסמארטפון</a></li>
           <li role="presentation"><a href="#feature-4" aria-controls="feature-4" role="tab" data-toggle="tab"><i class="fa fa-star descProject"></i>תוכנה לניהול פנסיון של חיות מחמד</a></li>
           <li role="presentation"><a href="#feature-5" aria-controls="feature-5" role="tab" data-toggle="tab"><i class="fa fa-rocket descProject"></i>מערכת נתונים לבדיקות איידס</a></li>
-          <li role="presentation"><a href="#feature-6" aria-controls="feature-6" role="tab" data-toggle="tab"><i class="fa fa-tablet descProject"></i>מחשבון שכר</a></li>
+          <li role="presentation"><a href="#feature-6" aria-controls="feature-6" role="tab" data-toggle="tab"><i class="fa fa-tablet descProject"></i>תוכנה להזנת שעות עבודה וחישוב שכר</a></li>
           <li role="presentation"><a href="#feature-7" aria-controls="feature-7" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>אלקטרו - תבניות לחנויות אינטרנטיות</a></li>
+          <li role="presentation"><a href="#feature-8" aria-controls="feature-8" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>אוטומוציה להורדת טפסי 106</a></li>
         </ul>
-
 
         <!-- Tab panes -->
         <div class="feature-content tab-content col-md-8 col-sm-6 col-xs-12 col-md-pull-4 col-sm-pull-6 col-xs-pull-0">
@@ -358,7 +377,11 @@
             <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/Electro.jpg" alt="screenshot"></a>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="feature-8">
-            <a href="" target="_blank"><img class="img-responsive" src="assets/images/feature-8.jpg" alt="screenshot"></a>
+            <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/Astral106.jpg" alt="screenshot"></a>
+          </div>
+
+          <div role="tabpanel" class="tab-pane fade" id="feature-9">
+            <a href="" target="_blank"><img class="img-responsive" src="assets/images/feature-9.jpg" alt="screenshot"></a>
           </div>
           <!--//feature-content -->
         </div>
