Add HoursWork project pic

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/DrRonen.jpg" alt="screenshot"></a>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="feature-6">
-            <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/HoursWork.jpg" alt="screenshot"></a>
+            <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/HoursWork.png" alt="screenshot"></a>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="feature-8">
             <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/Astral106.jpg" alt="screenshot"></a>
