Add one support tool project

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
           <li role="presentation"><a href="#feature-5" aria-controls="feature-5" role="tab" data-toggle="tab"><i class="fa fa-rocket descProject"></i>מערכת נתונים לבדיקות איידס</a></li>
           <li role="presentation"><a href="#feature-6" aria-controls="feature-6" role="tab" data-toggle="tab"><i class="fa fa-tablet descProject"></i>תוכנה להזנת שעות עבודה וחישוב שכר</a></li>
           <li role="presentation"><a href="#feature-8" aria-controls="feature-8" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>אוטומוציה להורדת טפסי 106</a></li>
+          <li role="presentation"><a href="#feature-9" aria-controls="feature-9" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>כלי לתחזוקת קופה בחברת ONE</a></li>
         </ul>
 
         <!-- Tab panes -->
@@ -377,8 +378,9 @@
           </div>
 
           <div role="tabpanel" class="tab-pane fade" id="feature-9">
-            <a href="" target="_blank"><img class="img-responsive" src="assets/images/feature-9.jpg" alt="screenshot"></a>
+            <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/supportTool.jpg" alt="screenshot"></a>
           </div>
+
           <!--//feature-content -->
         </div>
 
