--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <div class="tabbed-area row">
         <!-- Nav tabs -->
         <ul class="feature-nav nav nav-pill nav-stacked text-left col-md-4 col-sm-6 col-xs-12 col-md-push-8 col-sm-push-6 col-xs-push-0" role="tablist">
-          <li role="presentation" class="active"><a href="#feature-1" aria-controls="feature-1" role="tab" data-toggle="tab"><i class="fa fa-magic descProject"></i>מערכת לקרנות גידור</a></li>
+          <li role="presentation" class="active"><a href="#feature-1" aria-controls="feature-1" role="tab" data-toggle="tab"><i class="fa fa-magic descProject"></i>מערכת חישוב מס רווחי הון</a></li>
           <li role="presentation"><a href="#feature-2" aria-controls="feature-2" role="tab" data-toggle="tab"><i class="fa fa-cubes descProject"></i>מערכת ניקוד לעידוד הישגיו של התלמיד</a></li>
           <li role="presentation"><a href="#feature-3" aria-controls="feature-3" role="tab" data-toggle="tab"><i class="fa fa-bar-chart descProject"></i>מערכת היכרויות אינטרנטית ומותאמת לסמארטפון</a></li>
           <li role="presentation"><a href="#feature-4" aria-controls="feature-4" role="tab" data-toggle="tab"><i class="fa fa-star descProject"></i>תוכנה לניהול פנסיון של חיות מחמד</a></li>
