--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="item-content-inner">
 
               <h2 class="heading">אוהבים חדשנות?</h2>
-              <p class="intro">אנחנו משתמשים בטכנלוגיות החדשות ביותר בדגש על יעילות,אבטחה ומודרניות.</p>
+              <p class="intro">אנחנו משתמשים בטכנולוגיות החדשות ביותר בדגש על יעילות, אבטחה, ומודרניות.</p>
               <a class="btn btn-primary btn-cta" href="#contact" target="_blank">צרו איתנו קשר</a>
 
             </div>
