--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
   <link id="theme-style" rel="stylesheet" href="assets/css/MyStyles.css">
 
-  
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -482,7 +482,7 @@
           <div class="item col-md-6 col-sm-6 col-xs-12">
             <div class="item-inner">
               <div class="profile">
-                <img class="profile-image" src="assets/images/team-1.png" alt="Stacy s." />
+                <img class="profile-image" src="assets/images/person-icon.png" alt="Stacy s." />
               </div>
 
               <div class="member-content">
@@ -512,7 +512,7 @@
           <div class="item col-md-6 col-sm-6 col-xs-12">
             <div class="item-inner">
               <div class="profile">
-                <img class="profile-image" src="assets/images/team-2.png" alt="Vladislav Shubin" />
+                <img class="profile-image" src="assets/images/person-icon.png" alt="Vladislav Shubin" />
               </div>
 
               <div class="member-content">
