Add new project

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
     <script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js"></script>
     -->
+
 </head>
 
 <body dir="rtl">
@@ -323,11 +324,9 @@
             </div>
             <!--//quote-source-->
           </blockquote>
-
         </div>
         <!--//quote-holder-->
       </div>
-
 
       <!--//item-->
     </div>
@@ -353,6 +352,7 @@
           <li role="presentation"><a href="#feature-6" aria-controls="feature-6" role="tab" data-toggle="tab"><i class="fa fa-tablet descProject"></i>תוכנה להזנת שעות עבודה וחישוב שכר</a></li>
           <li role="presentation"><a href="#feature-8" aria-controls="feature-8" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>אוטומוציה להורדת טפסי 106</a></li>
           <li role="presentation"><a href="#feature-9" aria-controls="feature-9" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>כלי לתחזוקת קופה בחברת ONE</a></li>
+          <li role="presentation"><a href="#feature-9" aria-controls="feature-10" role="tab" data-toggle="tab"><i class="fa fa-file-code-o descProject"></i>מערכת אינטרנטית לניהול מלאי</a></li>
         </ul>
 
         <!-- Tab panes -->
@@ -382,6 +382,13 @@
           <div role="tabpanel" class="tab-pane fade" id="feature-9">
             <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/supportTool.png" alt="screenshot"></a>
           </div>
+
+          <div role="tabpanel" class="tab-pane fade" id="feature-10">
+            <a href="" target="_blank"><img class="img-responsive" src="assets/images/Projects/AngularUIMaterial.jpg" alt="screenshot"></a>
+          </div>
+
+
+
 
           <!--//feature-content -->
         </div>
